--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,7 +35,7 @@
 					</p>
 					<div class="vertical-center">
 						<button>
-							<a href="./firstblogpost.html">Read More</a>
+							<a href="/HTML/firstblogpost.html">Read More</a>
 						</button>
 					</div>
 				</div>
@@ -52,7 +52,7 @@
 					</p>
 					<div class="vertical-center">
 						<button>
-							<a href="./secondblogpost.html">Read More</a>
+							<a href="/HTML/secondblogpost.html">Read More</a>
 						</button>
 					</div>
 				</div>
@@ -69,7 +69,7 @@
 					</p>
 					<div class="vertical-center">
 						<button>
-							<a href="./thirdblogpost.html">Read More</a>
+							<a href="/HTML/thirdblogpost.html">Read More</a>
 						</button>
 					</div>
 				</div>
@@ -86,7 +86,7 @@
 					</p>
 					<div class="vertical-center">
 						<button>
-							<a href="./fourthblogpost.html">Read More</a>
+							<a href="/HTML/fourthblogpost.html">Read More</a>
 						</button>
 					</div>
 				</div>
