Added block quote and typography

--- a/HTML/firstblogpost.html
+++ b/HTML/firstblogpost.html
@@ -27,14 +27,18 @@
                 <h2>Five Product Game changer</h12>
              </div>
 
+
         <div class="avatar-container">
+            <figure class="image-figure"> 
             <img src="/assets/Images/portrait3.jpg" alt="Author's Avatar" class="avatar">
+            <figcaption class="image-caption">An image of Ifeoma</figcaption>
+            </figure>
         </div>
 
         <div class="author-info">
             <h2>Ifeoma Ngagbu</h2>
             <h4>CEO Maybelline Royal Line</h4>
-                <div class="social-media-icons">
+             <div class="social-media-icons">
                     <a href=""></a>
                     <a href=""></a>
                     <a href=""></a>
@@ -42,6 +46,9 @@
                 </div>
             <p>Ifeoma Ngagbu is a Dermatologist and Skin Care Consultant</p>
             <p>A pioneer in the bridal makeup profession in Nigeria, She has set up international standard skincare studios</p>
+            <blockquote>
+                "Skincare is not a magic wand, but a mirror reflecting your dedication."
+            </blockquote>
             <hr>
         </div>
 
@@ -54,7 +61,10 @@
                 a heavier cream-based product will lend much-needed moisture if dry, irritated, and peeling skin is an issue.  </p>
 
             <div class="blog-imgcontainer">
+                <figure class="image-figure"> 
                 <img class="full-blog" src="/assets/Images/Blogimage0.jpg" alt="Blog-Image">
+                <figcaption class="image-caption">Skincare Haul</figcaption>
+                </figure>
             </div>
 
             <p class="justify-align">Acne-prone skin and serums are like a match made in heaven. That's because serums are 
