--- a/HTML/fourthblogpost.html
+++ b/HTML/fourthblogpost.html
@@ -27,13 +27,19 @@
              </div>
 
         <div class="avatar-container">
-            <img src="/assets/Images/portrait6.jpg" alt="Author's Avatar" class="avatar">
+            <figure class="image-figure">
+            <img src="/assets/Images/portrait5.jpg" alt="Author's Avatar" class="avatar">
+              <figcaption class="image-caption">Image of Adenike</figcaption>
+             </figure>
         </div>
 
         <div class="author-info">
             <h2>Adenike Nelson</h2>
             <h7>Adenike Nelson is a Dermatologist and Designer</p>
                 <p>A pioneer in the bridal makeup profession in Nigeria, She has set up international standard skincare studios</p>
+                <blockquote>
+                "Skincare is not a magic wand, but a mirror reflecting your dedication."
+            </blockquote>
                 <hr>
         </div>
 
@@ -43,7 +49,10 @@
 When it comes to finding the best skincare products for acne that will help clear it up and not have it do a 180, it's essential to use products formulated with common acne fighters like salicylic acid, benzoyl peroxide, retinol, and niacinamide.</p>
 
             <div class="blog-imgcontainer">
+                <figure class="image-figure">
                 <img class="full-blog" src="/assets/Images/Blogimage6.jpg" alt="Blog_Image">
+                <figcaption class="image-caption">Image of a Model</figcaption>
+                 </figure>
             </div>
 
             <p class="justify-align"> A well-rounded skincare routine for acne should include a good cleanser that delivers precisely what acne-prone skin needs. One of the best skincare products for acne is a gel or light cream cleanser that is formulated with ingredients that fight breakouts, like salicylic acid, tea tree oil, benzoyl peroxide, or niacinamide, and those that keep the skin barrier protected and the skin hydrated like ceramides, glycerin, and hyaluronic acid. Acne face washes are known for stripping away much-needed oil, leaving the skin feeling tight and dry, so pay attention to the ingredients in your cleanser to avoid this.
