--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,15 +24,15 @@
 			</div>
 			<div class="container">
 				<div class="box">
-					<img
-						class="img-blogpost"
-						src="/assets/Images/Blogimage0.jpg"
-						alt="A picture of a Model" />
+					<figure class="image-figure">
+						<img
+							class="img-blogpost"
+							src="/assets/Images/Blogimage0.jpg"
+							alt="A picture of a Model" />
+						<figcaption class="image-caption">Skincare Beauty haul</figcaption>
+					</figure>
 					<h4 class="title">Five Product Game changer</h4>
-					<p>
-						Oily and acne-prone skin must be moisturized so oil production
-						doesn't go into overdrive. However, using the best moisturizer.
-					</p>
+					<p>Oily and acne-prone skin must be moisturized so oil production.</p>
 					<div class="vertical-center">
 						<button>
 							<a href="/HTML/firstblogpost.html">Read More</a>
@@ -41,14 +41,16 @@
 				</div>
 
 				<div class="box">
-					<img
-						class="img-blogpost"
-						src="/assets/Images/Blogimage7.jpg"
-						alt="A picture of a Model" />
+					<figure class="image-figure">
+						<img
+							class="img-blogpost"
+							src="/assets/Images/Blogimage7.jpg"
+							alt="A picture of a Model" />
+						<figcaption class="image-caption">A Skincare Model</figcaption>
+					</figure>
 					<h4 class="title">How To Achieve Glass Skin</h4>
 					<p>
-						Scars are a normal part of life, and youll be hard-pressed to find
-						someone without one. When a scar forms on the.
+						Scars are a normal part of life, and youll be hard-pressed to find.
 					</p>
 					<div class="vertical-center">
 						<button>
@@ -58,14 +60,16 @@
 				</div>
 
 				<div class="box">
-					<img
-						class="img-blogpost"
-						src="/assets/Images/Blogimage8.jpg"
-						alt="A picture of a Model" />
+					<figure class="image-figure">
+						<img
+							class="img-blogpost"
+							src="/assets/Images/Blogimage8.jpg"
+							alt="A picture of a Model" />
+						<figcaption class="image-caption">BodyCare Products</figcaption>
+					</figure>
 					<h4 class="title">How To Layer Your Scent</h4>
 					<p>
-						Antioxidant-rich vitamin C can help improve the tone and texture of
-						scarred skin by reducing redness in the skin.
+						Antioxidant-rich vitamin C can help improve the tone and texture of.
 					</p>
 					<div class="vertical-center">
 						<button>
@@ -75,15 +79,15 @@
 				</div>
 
 				<div class="box">
-					<img
-						class="img-blogpost"
-						src="/assets/Images/Blogimage6.jpg"
-						alt="A picture of a Model" />
+					<figure class="image-figure">
+						<img
+							class="img-blogpost"
+							src="/assets/Images/Blogimage6.jpg"
+							alt="A picture of a Model" />
+						<figcaption class="image-caption">A Skincare Model</figcaption>
+					</figure>
 					<h4 class="title">Sunkissed Skin: A Routine</h4>
-					<p>
-						Acne-prone skin has a mind of its own. The causes of acne are
-						multifactor, but this skin type is easily irritated and inflamed.
-					</p>
+					<p>Acne-prone skin has a mind of its own. The causes of acne are.</p>
 					<div class="vertical-center">
 						<button>
 							<a href="/HTML/fourthblogpost.html">Read More</a>
