--- a/HTML/secondblogpost.html
+++ b/HTML/secondblogpost.html
@@ -27,7 +27,10 @@
              </div>
 
         <div class="avatar-container">
+            <figure class="image-figure"> 
             <img src="/assets/Images/portrait2.jpg" alt="Author's Avatar" class="avatar">
+            <figcaption class="image-caption">An Image of Chloe</figcaption>
+            </figure>
         </div>
 
         <div class="author-info">
@@ -35,6 +38,9 @@
             <h4>Covener and Founder Beauty Formula</h4>
             <p>Chloe Kome is a Scientific Reseacher and Enterpreneur</p>
             <p>She is the founder and CEO of Beauty Formula and creator of the Tara Orekelewa Beauty range, Inspired Perfume and the H.I.P Beauty range.</p>
+            <blockquote>
+                "Skincare is not a magic wand, but a mirror reflecting your dedication."
+            </blockquote>
             <hr>
         </div>
 
@@ -47,7 +53,10 @@
             </p>
 
             <div class="blog-imgcontainer">
+                <figure class="image-figure">
                 <img class="full-blog" src="/assets/Images/Blogimage7.jpg" alt="">
+                <figcaption class="image-caption">Skincare Model</figcaption>
+                 </figure>
             </div>
             <p class="justify-align">
                 Theres no way to know how a scar will form. Several factors dictate scar formation, including 
