--- a/HTML/thirdblogpost.html
+++ b/HTML/thirdblogpost.html
@@ -26,7 +26,10 @@
              </div>
 
         <div class="avatar-container">
+            <figure class="image-figure"> 
             <img src="/assets/Images/portrait6.jpg" alt="Author's Avatar" class="avatar">
+            <figcaption class="image-caption">An Image of Zinny</figcaption>
+            </figure>
         </div>
 
         <div class="author-info">
@@ -34,6 +37,9 @@
             <h4>Cosmetologist Gossip My Beauty</h4>
             <h7>Zinny Anozie is a Skin Consultant and Bacteriologist</h7>
             <h7>She is an alumnus of the Lagos Business School Chief Executive Programme, INSEAD Abu Dhabi, Yale University</h7>
+            <blockquote>
+                "Skincare is not a magic wand, but a mirror reflecting your dedication."
+            </blockquote>
              <hr>
         </div>
 
@@ -45,7 +51,10 @@
                 retinoids can help reduce the look of more superficial scars like acne scars and stretch marks by evening out the skins texture.
             </p>
             <div class="blog-imgcontainer">
+                <figure class="image-figure"> 
                 <img class="full-blog" src="/assets/Images/Blogimage8.jpg" alt="blog Image">
+                <figcaption class="image-caption" >Bodycare Product</figcaption>
+                </figure>
             </div>
            <p class="justify-align">
             Skin elasticity (a.k.a. the amount of bounce-back your skin has when pinched) is a key component of what keeps skin
