--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						class="img-blogpost"
 						src="/assets/Images/Blogimage0.jpg"
 						alt="A picture of a Model" />
+					<figcaption>Korean Skin Care Product</figcaption>
 					<h4 class="title">Five Product Game changer</h4>
 					<p>
 						Oily and acne-prone skin must be moisturized so oil production
